[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes/Minigame2/NoteController/Note/MusicalNote.gd" type="Script" id=1]
[ext_resource path="res://Assets/Concerto/nota_musical.png" type="Texture" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 90
corner_radius_top_right = 90
corner_radius_bottom_right = 90
corner_radius_bottom_left = 90

[sub_resource type="CircleShape2D" id=2]
radius = 25.0

[node name="MusicalNote" type="Area2D" groups=[
"Note",
]]
script = ExtResource( 1 )

[node name="ColorRect" type="Panel" parent="."]
visible = false
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
mouse_default_cursor_shape = 2
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Collision" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="NoteSound" type="AudioStreamPlayer" parent="."]

[node name="Button" type="TextureButton" parent="."]
visible = false
margin_left = -22.0
margin_top = -18.0
margin_right = 22.0
margin_bottom = 18.0
rect_pivot_offset = Vector2( 22, 18 )
texture_normal = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Note_texture" type="Sprite" parent="."]
texture = ExtResource( 2 )

[connection signal="area_entered" from="." to="." method="_on_MusicalNote_area_entered"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
